tooling/nargo_cli/tests/snapshots/execution_success/assign_mutation_in_lvalue/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    bug();
    ()
}

fn bug() {
    let mut a: ([Field; 2], Field) = ([1, 2], 3);
    {
        let i_3770: Field = {
            a = ([4, 5], 6);
            1
        };
        a.0[i_3770] = 7;
    };
    assert(a == ([4, 7], 6));
}
