tooling/nargo_cli/tests/snapshots/execution_success/assign_mutation_in_lvalue/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71TSw7CIBAFoVGs3diNxktQi2mXLrwIseEcPbqQDGGC6AboS8gwMHlvHh9KAihETjLgSW4QBcQd2md2PCGXeRhEpFuSf5ZKiYS/gv2PAjhpHX7p+Sudv9wDz2sN/NiL1z3Y0aL5iYT3Ucu/v7+a/vs/nlvw2m/g1eLeRfoYNLHGEjUU3dEV5l2ijiCP/o/wtbyvaZbS6zHgb8h371i/ieovkB+j/l3kGX2aSQ9m1EY/9LKotz5H/A6/3oLLP7CfgiF9BQAA",
  "debug_symbols": "dZBNDoMgEIXvMmsWYtWmXsUYgzoaEgIEoUljuHsHf1q76GYew+N7ZGaFEfswd1JPZoG6WaF3Uik5d8oMwkuj6XaFLBV+g5oz4MUu5S7VLneSGBmcWOcdYqIuOZRuhUPtodZBKQZPocL2aLFCb+qFIzdjgHokpcBJKkynyL509h/l1cHm/AOXRLfUiUG6n7liynFS9AqPdgp6uLj+ZU/n3It1ZsAxOExJl+VQbfiD5UUb029v",
  "file_map": {
    "50": {
      "source": "fn main() {\n    bug();\n    comptime { bug() };\n}\n\nfn bug() {\n    let mut a = ([1, 2], 3);\n    a.0[{\n    a = ([4, 5], 6);\n    1\n    }] = 7;\n\n    assert_eq(a, ([4, 7], 6));\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
